testsuite/tests/typing-error-messages/arrow.ml.reference

#           Characters 81-126:
  ......struct
          let f _ _ _ _ x y = x +. y
  end..
Error: Signature mismatch:
       Modules do not match:
         sig val f : ... -> float -> ... -> float end
       is not included in
         sig val f : ... -> int -> ... -> int end
       Values do not match:
         val f : ... -> float -> ... -> float
       is not included in
         val f : ... -> int -> ... -> int
#           Characters 87-136:
  ......struct
          let f ?xzy:_ _ _ _ x y = x + y
  end..
Error: Signature mismatch:
       Modules do not match:
         sig val f : ?xzy:'a -> ... -> int end
       is not included in
         sig val f : ?xyz:int -> ... -> int end
       Values do not match:
         val f : ?xzy:'a -> ... -> int
       is not included in
         val f : ?xyz:int -> ... -> int
#                             Characters 345-491:
  ......struct
    let f (_:ui) (_:x) (_:saevae) (_:x) (_:luonis) (_:x) (_:iram)
    (_:x) (x:quoque) (_:x) (_:bello) (_:x) (_:dum)
    (_:x) (_:urbem) = ()
  end..
Error: Signature mismatch:
       Modules do not match:
         sig val f : ... -> x -> ... -> x -> ... -> unit end
       is not included in
         sig val f : ... -> superum -> ... -> memorem -> ... -> unit end
       Values do not match:
         val f : ... -> x -> ... -> x -> ... -> unit
       is not included in
         val f : ... -> superum -> ... -> memorem -> ... -> unit
#                   Characters 106-166:
  ........struct
                  let f ~lbll ?optt () = ()
          end
Error: Signature mismatch:
       Modules do not match:
         sig val f : lbll:'a -> ?optt:'b -> ... -> unit end
       is not included in
         sig val f : lbl:unit -> ?opt:unit -> ... -> unit end
       Values do not match:
         val f : lbll:'a -> ?optt:'b -> ... -> unit
       is not included in
         val f : lbl:unit -> ?opt:unit -> ... -> unit
#                 Characters 112-181:
  ........struct
                  let f x y z w t= x + y + z + w + t
          end
Error: Signature mismatch:
       Modules do not match:
         sig val f : int -> ... -> int end
       is not included in
         sig val f : unit -> ... -> unit end
       Values do not match:
         val f : int -> ... -> int
       is not included in
         val f : unit -> ... -> unit
#                                   Characters 49-50:
  let f: int -> int -> int -> int -> int -> int = 0
                                                  ^
Error: This expression has type int but an expression was expected of type
         int -> ... -> int
# 
